--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -58,7 +58,48 @@ The main requirements the system has to fulfill are the following:
     \item System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository.
 \end{enumerate}
 \subsubsection{Use cases}
-\subsubsection{Requirements mapping}
+TODO
+\subsubsection{Goals mapping}
+$\bullet$ \textbf{G1}: Allow students to participate to collaborative programming challenges
+\begin{center}
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \hline
+    \end{tabular}
+\end{center}
+$\bullet$ \textbf{G2}: Allow educators to create programming challenges
+\begin{center}
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \hline
+    \end{tabular}
+\end{center}
+$\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' submissions
+\begin{center}
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \hline
+    \end{tabular}
+\end{center}
+$\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submissions
+\begin{center}
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \hline
+    \end{tabular}
+\end{center}
+$\bullet$ \textbf{G5}: Allow students to track their performance
+\begin{center}
+    \begin{tabular}{ |c|c| }
+        \hline
+        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \hline
+    \end{tabular}
+\end{center}
 
 \subsection{Performance Requirements}
 Even though the platform is not mission critical, should guarantee a smooth and appealing experience to all kind of users. Given the complexity of the overall project, we describe different performance requirements for different aspects:
