--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -136,11 +136,11 @@ Moreover, from the moment that the platform will also use cookies (e.g. to keep 
     \item Supported programming languages are limited to popular options like Java, Python and C++.
     \item Registered educators are all legitimate and verified.
     \item Educators upload correct test cases and well-structured Code Kata projects.
-    \item Users are expected to engage in code kata battles with integrity, without resorting to plagiarism or cheating.
-    \item Maximum number of students per groups an educator can set will always be bounded (e.g. less than 4).
-    \item Students will fork the code kata GitHub repository once ready and invite only his teammates as collaborators.
-    \item Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow.
+    \item Students are expected to engage in Code Kata Battles with integrity, without resorting to plagiarism or cheating (e.g. inviting more or different collaborators with respect to the ones inside the team).
+    \item Maximum number of students per group an educator can set will always be bounded (e.g. less than 4).
     \item Every student has a GitHub account.
+    \item Students will fork the Code Kata GitHub repository once ready.
     \item Students know how to setup a GitHub Actions worfkflow.
+    \item Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow.
     \item Static analysis tools are able to quantify the specified code quality aspects.
 \end{enumerate}
