--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -62,44 +62,80 @@ TODO
 \subsubsection{Goals mapping}
 $\bullet$ \textbf{G1}: Allow students to participate to collaborative programming challenges
 \begin{center}
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|m{8cm}| }
         \hline
-        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \textbf{Requirements} 
+        & \textbf{R1}: lol \\
+        \hline
+        \textbf{Domain Assumptions} 
+        & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
+        & \textbf{D5}: Students are expected to engage in Code Kata Battles with integrity, without resorting to plagiarism or cheating (e.g. inviting more or different collaborators with respect to the ones inside the team) \\
+        & \textbf{D6}: Maximum number of students per group an educator can set will always be bounded (e.g. less than 4) \\
+        & \textbf{D7}: Every student has a GitHub account \\
+        & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
+        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
+        & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
 \end{center}
 $\bullet$ \textbf{G2}: Allow educators to create programming challenges
 \begin{center}
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|m{8cm}| }
         \hline
-        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \textbf{Requirements} 
+        & \textbf{R1}: lol \\
+        \hline
+        \textbf{Domain Assumptions}
+        & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
+        & \textbf{D2}: Supported programming languages are limited to popular options like Java, Python and C++ \\
+        & \textbf{D3}: Registered educators are all legitimate and verified \\
+        & \textbf{D4}: Educators upload correct test cases and well-structured Code Kata projects \\
         \hline
     \end{tabular}
-\end{center}
+\end{center}        
 $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' submissions
 \begin{center}
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|m{8cm}| }
         \hline
-        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \textbf{Requirements} 
+        & \textbf{R1}: lol \\
+        \hline
+        \textbf{Domain Assumptions}
+        & \textbf{D4}: Educators upload correct test cases and well-structured Code Kata projects \\
+        & \textbf{D11}: Static analysis tools are able to quantify the specified code quality aspects \\
         \hline
     \end{tabular}
-\end{center}
+\end{center} 
 $\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submissions
 \begin{center}
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|m{8cm}| }
         \hline
-        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \textbf{Requirements} 
+        & \textbf{R1}: lol \\
+        \hline
+        \textbf{Domain Assumptions}
+        & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
+        & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
+        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
+        & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
-\end{center}
+\end{center} 
 $\bullet$ \textbf{G5}: Allow students to track their performance
 \begin{center}
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|m{8cm}| }
         \hline
-        \textbf{Requirements} & \textbf{Domain Assumptions} \\
+        \textbf{Requirements} 
+        & \textbf{R1}: lol \\
+        \hline
+        \textbf{Domain Assumptions}
+        & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
+        & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
+        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
+        & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
-\end{center}
+\end{center} 
 
 \subsection{Performance Requirements}
 Even though the platform is not mission critical, should guarantee a smooth and appealing experience to all kind of users. Given the complexity of the overall project, we describe different performance requirements for different aspects:
