--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -143,4 +143,5 @@ Moreover, from the moment that the platform will also use cookies (e.g. to keep 
     \item Students know how to setup a GitHub Actions worfkflow.
     \item Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow.
     \item Static analysis tools are able to quantify the specified code quality aspects.
+    \item Students use external communication channels.
 \end{enumerate}
