--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -75,6 +75,7 @@ $\bullet$ \textbf{G1}: Allow students to participate to collaborative programmin
         & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
         & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
         & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
+        & \textbf{D12}: Students use external communication channels \\
         \hline
     \end{tabular}
 \end{center}
@@ -90,6 +91,7 @@ $\bullet$ \textbf{G2}: Allow educators to create programming challenges
         & \textbf{D2}: Supported programming languages are limited to popular options like Java, Python and C++ \\
         & \textbf{D3}: Registered educators are all legitimate and verified \\
         & \textbf{D4}: Educators upload correct test cases and well-structured Code Kata projects \\
+        & \textbf{D6}: Maximum number of students per group an educator can set will always be bounded (e.g. less than 4) \\
         \hline
     \end{tabular}
 \end{center}        
@@ -101,7 +103,11 @@ $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' subm
         & \textbf{R1}: lol \\
         \hline
         \textbf{Domain Assumptions}
+        & \textbf{D2}: Supported programming languages are limited to popular options like Java, Python and C++ \\
         & \textbf{D4}: Educators upload correct test cases and well-structured Code Kata projects \\
+        & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
+        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
+        & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         & \textbf{D11}: Static analysis tools are able to quantify the specified code quality aspects \\
         \hline
     \end{tabular}
@@ -116,7 +122,6 @@ $\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submission
         \textbf{Domain Assumptions}
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
         & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
-        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
         & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
@@ -130,9 +135,6 @@ $\bullet$ \textbf{G5}: Allow students to track their performance
         \hline
         \textbf{Domain Assumptions}
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
-        & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
-        & \textbf{D9}: Students know how to setup a GitHub Actions worfkflow \\
-        & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
 \end{center} 
