--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -7,10 +7,12 @@ The software does not require any other hardware interface different from normal
 \subsubsection{Software Interfaces}
 Some of the functionalities provided by the system exploit specific interfaces to work. These are:
 \begin{itemize}
-    \item \textbf{GitHub interface}: the system has to be able to interface with GitHub to create the original repository for each battle, which will then be forked by the different teams. Moreover, in order to be notified about the submission of a new solution, the system itself must expose a REST endpoint that will be invoked by the automated GitHub Actions workflow set up by each team.
+    \item \textbf{GitHub interface}: the system must be able to interface with GitHub API to create the original repository for each battle and to pull code submissions.
     \item \textbf{Static analysis tools}: some of the aspects that have to be evaluated require the execution of some static analysis method over the provided code. In this case, the platform utilizes external services directly provided by third-party organizations.
 \end{itemize}
 Each of these interfaces are implemented by correctly setting and utilizing specific API calls to the involved services that will be included inside the platform’s inner processes.
+
+Moreover, in order to be notified about the submission of a new solution, the system itself must expose a REST endpoint that will be invoked by the automated GitHub Actions workflow set up by each team on their repository.
 \subsubsection{Communication Interfaces}
 From the moment that most of the system’s services are provided through the platform’s website and REST API calls, no other protocol than normal HTTP should be needed. Anyway, it is worth mentioning that communication between the system and user is achieved through notifications sent via mail using an external mail service provider.
 
