--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -34,14 +34,14 @@ The main requirements the system has to fulfill are the following:
     \item System shall allow educator (battle creator) to set the registration deadline of the battle.
     \item System shall allow educator (battle creator) to set the submission deadline of the battle.
     \item System shall allow educator (battle creator) to enable/disable optional manual evaluation for the battle.
-    \item System shall allow educator (battle creator) to select relevant aspects of quality level to be extracted through static analysis.
+    \item System shall allow educator (battle creator) to select relevant aspects of code quality to be extracted through static analysis.
     \item System shall notify all users enrolled to a tournament about a newly created battle.
     \item System shall integrate with external static analysis tools through proper API calls.
     \item System shall create the GitHub repository of a battle as soon as the registration phase closes.
     \item System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible}.
     \item System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle.
     \item System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise.
-    \item System shall update the battle teams’ ranks after a new score is available.
+    \item System shall update the battle teams’ ranks right after a new score is available.
     \item System shall notify all students participating to the battle about the availability of the final battle rank.
     \item System shall update the tournament students’ scores as the sum of all the battle scores received during the tournament once the final battle rank becomes available.
     \item System shall notify all involved users about the availability of the tournament student’s final rank.
@@ -64,12 +64,29 @@ TODO
 \subsubsection{Goals mapping}
 $\bullet$ \textbf{G1}: Allow students to participate to collaborative programming challenges
 \begin{center}
-    \begin{tabular}{ |c|m{8cm}| }
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
         \hline
         \textbf{Requirements} 
-        & \textbf{R1}: lol \\
+        & \textbf{R1}: System shall allow user to register as educator or student \\
+        & \textbf{R2}: System shall allow user to log in \\
+        & \textbf{R7}: System shall notify all students enrolled to the platform about a newly created tournament \\
+        & \textbf{R17}: System shall notify all users enrolled to a tournament about a newly created battle \\
+        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes \\
+        & \textbf{R27}: System shall allow all users to see the list of ongoing tournaments \\
+        & \textbf{R31}: System shall allow student to enroll to a tournament within the subscription deadline \\
+        & \textbf{R32}: System shall allow student to create a team within the registration deadline \\
+        & \textbf{R33}: System shall allow student (team creator) to set the team name \\
+        & \textbf{R34}: System shall allow student (team creator) to set the privacy of the group \\
+        & \textbf{R35}: System shall allow student to join a team \textit{only} before the registration deadline \\
+        & \textbf{R36}: System shall allow \textit{only} students who know the correct invite code to join private groups \\
+        & \textbf{R37}: System shall allow team members to set their the repository URL \\
+        & \textbf{R38}: System shall generate a unique API token for each team \\
+        & \textbf{R39}: System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository \\
         \hline
-        \textbf{Domain Assumptions} 
+    \end{tabular}
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
+        \hline
+        \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
         & \textbf{D5}: Students are expected to engage in Code Kata Battles with integrity, without resorting to plagiarism or cheating (e.g. inviting more or different collaborators with respect to the ones inside the team) \\
         & \textbf{D6}: Maximum number of students per group an educator can set will always be bounded (e.g. less than 4) \\
@@ -81,14 +98,32 @@ $\bullet$ \textbf{G1}: Allow students to participate to collaborative programmin
         \hline
     \end{tabular}
 \end{center}
+\newpage
 $\bullet$ \textbf{G2}: Allow educators to create programming challenges
 \begin{center}
-    \begin{tabular}{ |c|m{8cm}| }
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
         \hline
         \textbf{Requirements} 
-        & \textbf{R1}: lol \\
+        & \textbf{R1}: System shall allow user to register as educator or student \\
+        & \textbf{R2}: System shall allow user to log in \\
+        & \textbf{R3}: System shall allow educator to create a tournament \\
+        & \textbf{R4}: System shall allow educator (tournament creator) to set the name of the tournament \\
+        & \textbf{R5}: System shall allow educator (tournament creator) to set the description of the tournament \\
+        & \textbf{R6}: System shall allow educator (tournament creator) to set the subscription deadline of the tournament \\
+        & \textbf{R8}: System shall allow educator (tournament creator) to end the tournament \\
+        & \textbf{R9}: System shall allow educator (tournament creator) to add another educator as collaborator to the tournament \\
+        & \textbf{R10}: System shall allow educator (tournament creator or collaborator) to create a battle for the tournament \\
+        & \textbf{R11}: System shall allow educator (tournament creator or collaborator) to upload the Code Kata of the battle \\
+        & \textbf{R12}: System shall allow educator (battle creator) to set minimum and maximum number of students per group allowed for the battle \\
+        & \textbf{R13}: System shall allow educator (battle creator) to set the registration deadline of the battle \\
+        & \textbf{R14}: System shall allow educator (battle creator) to set the submission deadline of the battle \\
+        & \textbf{R15}: System shall allow educator (battle creator) to enable/disable optional manual evaluation for the battle \\
+        & \textbf{R16}: System shall allow educator (battle creator) to select relevant aspects of code quality to be extracted through static analysis \\
         \hline
-        \textbf{Domain Assumptions}
+    \end{tabular}
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
+        \hline
+        \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
         & \textbf{D2}: Supported programming languages are limited to popular options like Java, Python and C++ \\
         & \textbf{D3}: Registered educators are all legitimate and verified \\
@@ -99,12 +134,21 @@ $\bullet$ \textbf{G2}: Allow educators to create programming challenges
 \end{center}        
 $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' submissions
 \begin{center}
-    \begin{tabular}{ |c|m{8cm}| }
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
         \hline
         \textbf{Requirements} 
-        & \textbf{R1}: lol \\
+        & \textbf{R18}: System shall integrate with external static analysis tools through proper API calls \\
+        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes \\
+        & \textbf{R20}: System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible} \\
+        & \textbf{R22}: System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise \\
+        & \textbf{R37}: System shall allow team members to set their the repository URL \\
+        & \textbf{R38}: System shall generate a unique API token for each team \\
+        & \textbf{R39}: System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository \\
         \hline
-        \textbf{Domain Assumptions}
+    \end{tabular}
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
+        \hline
+        \textbf{Domain \newline Assumptions} 
         & \textbf{D2}: Supported programming languages are limited to popular options like Java, Python and C++ \\
         & \textbf{D4}: Educators upload correct test cases and well-structured Code Kata projects \\
         & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
@@ -116,26 +160,49 @@ $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' subm
 \end{center} 
 $\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submissions
 \begin{center}
-    \begin{tabular}{ |c|m{8cm}| }
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
         \hline
         \textbf{Requirements} 
-        & \textbf{R1}: lol \\
+        & \textbf{R1}: System shall allow user to register as educator or student \\
+        & \textbf{R2}: System shall allow user to log in \\
+        & \textbf{R14}: System shall allow educator (battle creator) to set the submission deadline of the battle \\
+        & \textbf{R15}: System shall allow educator (battle creator) to enable/disable optional manual evaluation for the battle \\
+        & \textbf{R21}: System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle \\
         \hline
-        \textbf{Domain Assumptions}
+    \end{tabular}
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
+        \hline
+        \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
         & \textbf{D8}: Students will fork the Code Kata GitHub repository once ready \\
         & \textbf{D10}: Only one student per group will perform the steps needed to set-up the team's repository and the GitHub Actions workflow \\
         \hline
     \end{tabular}
 \end{center} 
+\newpage
 $\bullet$ \textbf{G5}: Allow students to track their performance
 \begin{center}
-    \begin{tabular}{ |c|m{8cm}| }
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
         \hline
         \textbf{Requirements} 
-        & \textbf{R1}: lol \\
+        & \textbf{R1}: System shall allow user to register as educator or student \\
+        & \textbf{R2}: System shall allow user to log in \\
+        & \textbf{R18}: System shall integrate with external static analysis tools through proper API calls \\
+        & \textbf{R20}: System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible} \\
+        & \textbf{R21}: System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle \\
+        & \textbf{R22}: System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise \\
+        & \textbf{R23}: System shall update the battle teams’ ranks right after a new score is available \\
+        & \textbf{R24}: System shall notify all students participating to the battle about the availability of the final battle rank \\
+        & \textbf{R25}: System shall update the tournament students’ scores as the sum of all the battle scores received during the tournament once the final battle rank becomes available \\
+        & \textbf{R26}: System shall notify all involved users about the availability of the tournament student’s final rank \\
+        & \textbf{R28}: System shall allow all users to see all tournaments’ ranks \\
+        & \textbf{R29}: System shall allow all users subscribed to the same battle the relative battle's rank \\
+        & \textbf{R30}: System should manage every ranking (tournament or battle) in a way that it represents the correct order of students/teams within its context, from the ones with the highest score to the ones with the lowest \\    
         \hline
-        \textbf{Domain Assumptions}
+    \end{tabular}
+    \begin{tabular}{ |m{3cm}|m{10cm}| }
+        \hline
+        \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
         \hline
     \end{tabular}
