some general fix and review

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -115,6 +115,13 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
     \item {\textbf{CKB:} Code Kata Battles}
     \item {\textbf{API:} Application Programming Interface}
     \item {\textbf{UML:} Unified Modeling Language}
+    \item {\textbf{GDPR:} General Data Protection Regulation}
+    \item {\textbf{HTML:} HyperText Markup Language}
+    \item {\textbf{CSS:} Cascading Style Sheets}
+    \item {\textbf{JSON:} JavaScript Object Notation}
+    \item {\textbf{REST:} REpresentational State Transfer}
+    \item {\textbf{URL:} Uniform Resource Locator}
+    \item {\textbf{HTTPS:} HyperText Transfer Protocol Secure}
 \end{itemize}
 \subsubsection{Abbreviations}
 \begin{itemize}
