--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -1,7 +1,20 @@
 \subsection{External Interface Requirements}
 \subsubsection{User Interfaces}
-TODO\\
-The platform will have a web interface accessible via browser from both students and educators. Key interfaces will include account registration, log in page, tournament/battle creation, team creation/joining and rankings visualization.
+The platform will have a web interface accessible via browser from both students and educators. 
+Now, some mockups of the main pages of the platform will be presented, organized by functionality.
+
+
+\begin{enumerate}[label=\textbf{F\arabic*)}]
+    \item \textbf{Signup and Login}
+\end{enumerate}
+
+
+
+
+
+
+
+
 \subsubsection{Hardware Interfaces}
 The software does not require any other hardware interface different than personal computers or smartphones equipped with modern browser from which users can access the platform.
 \subsubsection{Software Interfaces}
