--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -147,7 +147,7 @@ The main requirements the system has to fulfill are the following:
     \item System shall notify all involved users about the availability of the tournament student’s final rank.
     \item System shall allow all users to see the list of ongoing tournaments.
     \item System shall allow all users to see all tournaments’ ranks.
-    \item System shall allow all users subscribed to the same battle the relative battle's rank.
+    \item System shall allow all users to see all battles' ranks.
     \item System should manage every ranking (tournament or battle) in a way that it represents the correct order of students/teams within its context, from the ones with the highest score to the ones with the lowest.
     \item System shall allow student to enroll to a tournament within the subscription deadline.
     \item System shall allow student to create a team within the registration deadline.
@@ -293,7 +293,7 @@ $\bullet$ \textbf{G5}: Allow students to track their performance
         & \textbf{R25}: System shall update the tournament students’ scores as the sum of all the battle scores received during the tournament once the final battle rank becomes available \\
         & \textbf{R26}: System shall notify all involved users about the availability of the tournament student’s final rank \\
         & \textbf{R28}: System shall allow all users to see all tournaments’ ranks \\
-        & \textbf{R29}: System shall allow all users subscribed to the same battle the relative battle's rank \\
+        & \textbf{R29}: System shall allow all users to see all battles' ranks \\
         & \textbf{R30}: System should manage every ranking (tournament or battle) in a way that it represents the correct order of students/teams within its context, from the ones with the highest score to the ones with the lowest \\    
         \hline
     \end{tabular}
