upload some mockup comments and updated api endpoint on mockup

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -5,11 +5,13 @@ Now, some mockups of the main pages of the platform will be presented, organized
 
 \begin{enumerate}[label=\textbf{F\arabic*)}]
     \item \textbf{Signup and Login}\\
+    The signup page asks to the unregistered user to provide some personal information like name, surname, email address and password. Moreover, the user has to specify if he is a student or an educator by flagging the corresponding checkbox. In case he is a student, he is also asked to provide his GitHub's username. Alternatively, users can choose to sign up using third party services like Google or GitHub.\\
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\textwidth]{Mockups/1_signup.png}
         \caption{Signup page}
     \end{figure}
+    The login page asks to the registered user to provide his email address and password. Alternatively, users can choose to login using third party services like Google or GitHub.\\
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\textwidth]{Mockups/2_login.png}
@@ -17,6 +19,7 @@ Now, some mockups of the main pages of the platform will be presented, organized
     \end{figure}
 
     \item \textbf{Home page}\\
+    The home page is the first page that the user sees after logging in. If the logged user is a student, the homepage contains a brief overview of platform's ongoing tournaments, battles the user is partecipating in, a calendar with upcoming deadlines and some statistics of past battles. \\
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\textwidth]{Mockups/3_student_homepage.png}
