added educator requirement

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -161,6 +161,7 @@ The main requirements the system has to fulfill are the following:
     \item System shall allow team members to set their the repository URL.
     \item System shall generate a unique API token for each team.
     \item System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository.
+    \item System shall allow the educator to access the code of the submitted solutions.
 \end{enumerate}
 \subsubsection{Use cases}
 TODO
@@ -271,6 +272,7 @@ $\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submission
         & \textbf{R14}: System shall allow educator (battle creator) to set the submission deadline of the battle \\
         & \textbf{R15}: System shall allow educator (battle creator) to enable/disable optional manual evaluation for the battle \\
         & \textbf{R21}: System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle \\
+        & \textbf{R40}: System shall allow the educator to access the code of the submitted solutions \\
         \hline
         \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
